Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   margin-top: -40px;
+  overflow-x: hidden;
 }
 
 .App {
